# DataFetcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pull_request.yml
sample/: config.json  config.yml
src/: config.rs  errors.rs  files.rs  headers.rs  lib.rs  main.rs  network.rs  types.rs  yaml_config.rs
